--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1 class="main-heading" style="padding-top: 1em">DON'T MISS THE LIVE PERFORMANCE</h1>
+                    <h1 class="main-heading" style="padding-top: 1em">DON'T MISS THE LIVE PERFORMANCE EDITED</h1>
                     <p class="jazz-night">Third Friday Night Jazz series</p>
                     <p class = "jazz-night" > <i class="fa fa-clock-o" style="color:#FCB141" aria-hidden="true"></i>  Fri, Mar 29 @ 9:00PM </p>
                     <p  class="jazz-night" style="margin-top: 25px"><i class="fa fa-map-marker" style="color:#FCB141" aria-hidden="true"></i> New World Deli, Austin </p>
