--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="audio-table">
                                 <div class="jp-controls">
                                     <button class="jp-previous" value="previous"></button>
-                                    <button class="jp-play" value="play"></button>
+                                    <button class="jp-play" value="play">play</button>
                                     <button class="jp-next" value="next"></button>
                                     <button class="jp-stop" value="stop"></button>
                                 </div>
