--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                                     <button class="jp-stop" value="stop"></button>
                                 </div>
                                 <div class="jp-toggles">
-                                    <button class="jp-repeat">repeat</button>
-                                    <button class="jp-shuffle">shuffle</button>
-                                    <button class="jp-full-screen">full screen</button>
+                                    <button class="jp-repeat" value="repeat">repeat</button>
+                                    <button class="jp-shuffle" value="shuffle">shuffle</button>
+                                    <button class="jp-full-screen" value="full screen">full screen</button>
                                 </div>
                                 <div class="jp-gui">
                                     <div class="jp-video-play">
@@ -128,13 +128,13 @@
                                         </div>
                                         <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
                                         <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-                                        <button class="audio-playlist">Burnin Moonlight</button>
+                                        <button class="audio-playlist" value="song">Burnin Moonlight</button>
                                     </div>
 
                                 </div>
                                 <div class="jp-volume-controls">
-                                    <button class="jp-mute"></button>
-                                    <button class="jp-volume-max"></button>
+                                    <button class="jp-mute" value="mute"></button>
+                                    <button class="jp-volume-max" value="volume max"></button>
                                     <div class="jp-volume-bar">
                                         <div class="jp-volume-bar-value"></div>
                                     </div>
