--- a/about.html
+++ b/about.html
@@ -6,12 +6,7 @@
     <title>thequartet</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- ================= Favicon ================== -->
-    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-    <link rel="icon" sizes="72x72" href="images/favicon/android-icon-72x72.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <!-- Bootstrap css-->
@@ -33,11 +28,7 @@
 	<div class="preloader">
         <div class="loader">
             <div class="loader-inner line-scale-pulse-out">
-              <!-- <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div> -->
+              
             </div>
           </div>
     </div>
@@ -167,7 +158,7 @@
             <div class="row" style="margin-top:-2em">
                 <div class="event-detail">
                     <div class ="col-xs-12 col-lg-4">
-                        <img src="images/Mark.png" class="img-responsive" alt="image of band member" style="width :100%" />
+                        <img src="images/Mark.png" class="img-responsive" alt="image of band member" style="width:100%" />
                     </div>
                     <div class ="col-xs-12 col-lg-8">
                         <p class="event-time text-center" style="background-color:#3f3f3f; text-align:left; font-size:16px;"><strong>Mark Eastman</strong><br/>Mark “Dino” Eastwood is a well-known and highly respected sound engineer and bass player. Mark’s reputation for coaxing the best 
@@ -242,6 +233,7 @@
                             <a class="logo-brand" href="https://knowbility.org/" target="_blank">
                                <img src="images/knowbility-logo.jpg"   class="img-responsive" alt="knowbility organization logo">
                             </a>
+                            <p>Last updated at 10:15pm, April 15</p>
                 </div>
             </div>
         </div>
