--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="jp-volume-controls">
                                     <button class="jp-mute" value="mute"></button>
-                                    <button class="jp-volume-max" value="volume max"></button>
+                                    <button class="jp-volume-max" value="volume-max"></button>
                                     <div class="jp-volume-bar">
                                         <div class="jp-volume-bar-value"></div>
                                     </div>
@@ -248,12 +248,15 @@
                         <div class="comment-form">
                             <form class="ajaxForm" id="contact" action="https://formcarry.com/s/YwFG5EI0Wh3" method="POST" accept-charset="UTF-8" >
                                     <div class="single-input">
+                                         <aria-label for="name" style="color:#000">Name</label>
                                         <input type="text" name="name" placeholder="Name" class="form-control" required/>
                                     </div>
                                     <div class="single-input">
+                                         <aria-label for="email" style="color:#000">Email</label>
                                         <input type="email" name="email" placeholder="Email" class="form-control" required/>
                                     </div>                                
                                     <div class="single-input">
+                                         <aria-label for="message" style="color:#000">Message</label>
                                         <textarea name="message" rows="8" cols="80" placeholder="Message" required></textarea>
                                     </div>                                                    
                                     <button id="submit_button" type="submit" class="quartet-button">Send</button>
