--- a/event-list.html
+++ b/event-list.html
@@ -120,17 +120,17 @@
                             <form class="ajaxForm" id="event-list-form" action="https://formcarry.com/s/YwFG5EI0Wh3" method="POST" accept-charset="UTF-8" >
                                     <div class="single-input">
                                         <input type="text" name="name" placeholder="Name" class="form-control" required/>
-                                        <label for="name" style="color:#000"></label>
+                                        <label for="name" style="color:#000" value="name"></label>
                                     </div>
                                     <div class="single-input">
                                         <input type="email" name="email" placeholder="Email" class="form-control" required/>
-                                        <label for="email" style="color:#000"></label>
+                                        <label for="email" style="color:#000" value="email"></label>
                                     </div>                                
                                     <div class="single-input">
                                         <textarea name="message" rows="8" cols="80" placeholder="Message" required></textarea>
-                                        <label for="message" style="color:#000"></label>
+                                        <label for="message" style="color:#000" value="message"></label>
                                     </div>                                                    
-                                    <button id="submit_button" type="submit" class="quartet-button">Send</button>
+                                    <button id="submit_button" type="submit" class="quartet-button" value="submit">Send</button>
                             </form>
                         </div>
                 
@@ -157,6 +157,7 @@
                             <a class="logo-brand" href="https://knowbility.org/" target="_blank">
                                <img src="images/knowbility-logo.jpg"  href="https://knowbility.org/" target="_blank" class="img-responsive" alt="knowbility organization logo" style="align:center">
                             </a>
+                            <p>Last updated at 10:15pm, April 15</p>
                 </div>
             </div>
         </div>
