--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                             <a class="logo-brand" href="https://knowbility.org/" target="_blank">
                                <img src="images/knowbility-logo.jpg"  href="https://knowbility.org/" target="_blank" class="img-responsive" alt="knowbility organization logo">
                             </a>
+                            <p>Last updated at 10:15pm, April 15</p>
                 </div>
             </div>
         </div>
