--- a/about.html
+++ b/about.html
@@ -90,8 +90,19 @@
             
             <div class="row">
                 <div class="col-xs-12">            
-                    <p class = "jazz-night" >Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. </p>
-                    <p class = "jazz-night" >Mauris non tempor quam, et lacinia sapien. Mauris accumsan eros eget libero posuere vulputate. Etiam elit elit, elementum sed varius at, adipiscing vitae est. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci lectus, consectetur vel posuere posuere, rutrum eu ipsum. Aliquam eget odio sed ligula iaculis consequat at eget orci. </p>                    
+                    <p class = "jazz-night" >The Quartet - brain child of Steve Carter, Musical Director, Bass Player, longtime Austin musician.
+A couple of years ago Steve’s Reggae band, Pressure, did a few reunion shows. During that time Steve told Sebastian Williams...”Man, you ought to be singing Nat King Cole songs. You just have THAT voice” Sebastian was game.
+Not long after that. Steve’s songwriting partner from the 90’s, Ron Hicks got in touch about playing together again.
+
+
+<p class = "jazz-night" >Steve: “Initially, Ron and I just got back together to play our old folksy songs but as we would sit there, after doing our repertoire, we started to play old standards…”Do you know this one? Yeah! How about this one?” Then we slowly started incorporating those into our folk sets. Ron Hicks is our musical professor. He went to Berklee College of Music in Boston years ago. Steve picks the songs, Ron tells us how to play’em. His direction is perfect. He and Steve churn along like a rhythm train and grin at each other. It’s…FUN! Donny Silverman just plays great solos. So, Steve called Donny and ran it buy him. His first response was “Steve, you know I don’t really play jazz.” I said “Join the club” (We even considered calling the band “4 Guys Who Have Never Played Jazz”)
+What it has become is….magical. We have FUN! The pieces fit, beautifully!</p>
+
+<p class = "jazz-night" >For a short time we were joined by Cindy Jon Morse on piano. It was nice having her while we did. She is a wonderful friend and an exceptional musician. 
+When it ended up just being the 4 of us, we found our groove. It’s a full-on learning experience every time we approach songs like: “One For My Baby” and” Under My Skin”- Sinatra, “Do Nothing Till You Hear From Me” - Joe Williams, “My One and Only Love” - John Coltrane and Johnny Hartman, “I Wanna Be Around” - Tony Bennett’ Stars Fell on Alabama”- Louie and Ella and Nat Cole faves “Just You, Just Me” and “I Was a Little Too Lonely”. The band is so much more than we’d hoped for.
+We are THE QUARTET.
+
+ </p>
                 </div>
                                 
             </div>
